<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-150dp"
        android:text="@string/login_now"
        android:textColor="@color/colorLight"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-120dp"
        android:layout_marginTop="20dp"
        android:text="@string/studMod"
        android:textColor="#090000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editLStudID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/studID_hint"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/colorBlack" />

    <requestFocus />

    <Button
        android:id="@+id/btnLRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-90dp"
        android:text="@string/requestBtn"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnLBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-50dp"
        android:text="@string/backBtn"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/noAccount"/>

    <Button
        android:id="@+id/btnLRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/registerBtn" />

</LinearLayout>