<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/signature"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="-140dp"
        android:text="@string/studName"
        android:textSize="20sp"
        android:textColor="#090000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="-27dp"
        android:id="@+id/tvDisplayName"
        android:text="@string/address_hint"
        android:textSize="20sp"
        android:textColor="#090000" />

    <com.kyanogen.signatureview.SignatureView
        xmlns:sign="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/signature_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        sign:penSize="5dp"
        sign:backgroundColor="#ffffff"
        sign:penColor="#000000"
        sign:enableSignature="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear"
        android:layout_marginStart="-130dp"
        android:layout_marginBottom="20dp"
        android:text="@string/clearBtn"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/saveBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/back"
        android:text="@string/backBtn"/>
</LinearLayout>