<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Register2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="@dimen/_4sdp"
                android:textColor="@color/colorFingerprint" />

            <TextView
                android:id="@+id/tvFormTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="Titlew"
                android:textColor="@color/promotion_blue"
                android:textSize="23sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/studName"
                android:textSize="20sp"
                android:textColor="#090000" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/studName"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/_12sdp"/>

            <requestFocus />

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/studContact"
                android:textSize="20sp"
                android:textColor="#090000" />

            <EditText
                android:id="@+id/editContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/studContact"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/_12sdp" />

            <requestFocus />

            <TextView
                android:id="@+id/tvPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/studPass"
                android:textSize="20sp"
                android:textColor="#090000" />

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/studPass"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/_12sdp" />

            <requestFocus />

            <TextView
                android:id="@+id/tvCfmPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/studCfmPass"
                android:textSize="20sp"
                android:textColor="#090000" />

            <EditText
                android:id="@+id/editCfmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/studCfmPass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/_12sdp" />

            <requestFocus />

            <TextView
                android:id="@+id/tvMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/studMod"
                android:textSize="20sp"
                android:textColor="#090000" />

            <Spinner
                android:id="@+id/spinMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/studYear"
                android:textSize="20sp"
                android:textColor="#090000" />

            <Spinner
                android:id="@+id/spinYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/nextBtn"
                    android:background="@color/colorAccent"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="-60dp"
                    android:text="@string/backBtn"
                    android:background="@color/colorAccent"
                    android:textColor="#ffffff" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
